crates/fig_integrations/src/shell/snapshots/fig_integrations__shell__test__bash_post_profile.post.bash.snap
---
source: crates/fig_integrations/src/shell/mod.rs
expression: integration.get_contents()
---
_Q_LOCAL_BIN="$HOME/.local/bin"
[[ ":$PATH:" != *":$_Q_LOCAL_BIN:"* ]] && PATH="${PATH:+"$PATH:"}$_Q_LOCAL_BIN"
unset _Q_LOCAL_BIN

[ -n "$BASH_VERSION" ] && command -v ftab >/dev/null 2>&1 && eval "$(ftab init bash post --rcfile profile)"
